--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                             </button>
                         </p>
                         <div class="collapse show multi-collapse" id="collapse-1">
-                            <div class="card card-body p-2">
+                            <div class="card card-body border-0 p-2">
                                 <ul class="list-unstyled">
                                     <li><i class="bi bi-geo-alt-fill"></i><span class="px-1">Taipei, Taiwan</span></li>
                                     <li><i class="bi bi-buildings-fill"></i><span class="px-1">NTU Math</span></li>
@@ -139,7 +139,7 @@
                             </div>
                         </div>
                         <div class="collapse multi-collapse" id="collapse-2">
-                            <div class="card card-body p-1">
+                            <div class="card card-body border-0 p-1">
                                 <p>Hello, my name is Chun-Hsien (陳俊憲), and you can also call me Sean.
                                     I am a graduate student at National Taiwan University's Institute of Applied Mathematics,
                                     where I am specializing in financial engineering and machine learning .</p>
