--- a/index.html
+++ b/index.html
@@ -43,6 +43,23 @@
         .responsive-font {
             font-size: 30px;
         }
+        @keyframes cursor {
+            0% {
+                opacity: 0;
+            }
+            40% {
+                opacity: 0;
+            }
+            50% {
+                opacity: 1;
+            }
+            90% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
 }
     </style>
 
@@ -120,7 +137,7 @@
                                 data-bs-target=".multi-collapse" 
                                 aria-expanded="false" 
                                 aria-controls="collapse-1 collapse-2">
-                                <strong>Chun-Hsien Chen</strong>
+                                <strong>Chun-Hsien Chen <i class="bi bi-caret-left-fill" style="animation: cursor 1s infinite;"></i></strong>
                             </button>
                         </p>
                         <div class="collapse show multi-collapse" id="collapse-1">
