--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
             font-size: 1.1vw;
             font-family: Georgia, sans-serif!important;
         }
-        h5 {
+        /* h5 {
             color: rgb(0, 68, 254);
-        }
+        } */
         .cols {
             padding: 1rem;
             background-color: rgb(255, 255, 255);
             border: 2px solid rgb(102, 102, 102);
             /* color: whitesmoke; */
         }
-        .icon {
+        /* .icon {
             color: rgb(255, 255, 255);
         }
         .icon-info {
             color: rgb(0, 0, 0);
-        }
+        } */
         /* If the screen size is 1200px wide or more, set the font-size to 80px */
         @media (min-width: 1200px) {
         .responsive-font {
@@ -81,25 +81,25 @@
                 <ul class="navbar-nav ms-auto mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#education">
-                            <i class="bi bi-mortarboard-fill icon"></i>
+                            <i class="bi bi-mortarboard-fill"></i>
                             <span class="mx-1">Education</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#experience">
-                            <i class="bi bi-book-half icon"></i>
+                            <i class="bi bi-book-half"></i>
                             <span class="mx-1">Experience</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#award">
-                            <i class="bi bi-award-fill icon"></i>
+                            <i class="bi bi-award-fill"></i>
                             <span class="mx-1">Awards</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#project">
-                            <i class="bi bi-kanban-fill icon"></i>
+                            <i class="bi bi-kanban-fill"></i>
                             <span class="mx-1">Projects</span>
                         </a>
                     </li>
@@ -108,7 +108,7 @@
                         class="nav-link"
                         href="https://drive.google.com/file/d/1OTNFGJYRCUhMq0qT9cgAoYLI2-n2jGoF/view?usp=share_link" 
                         target="_blank">
-                            <i class="bi bi-file-earmark-person-fill icon"></i>
+                            <i class="bi bi-file-earmark-person-fill"></i>
                             <span class="mx-1">CV</span>
                         </a>
                     </li>
@@ -118,7 +118,7 @@
     </nav>
 </header>
 <body>
-    <div class="container-lg" style="font-size: 1.8vmin;">
+    <div class="container-lg" style="font-size: 2.0vmin;">
         <div class="row justify-content-center flex-nowrap">
             <div class="col-10">
                 <p class="my-0" style="color: #1f1e61;"><strong>About me</strong></p>
@@ -127,9 +127,9 @@
         </div>
         <div class="row justify-content-center flex-nowrap">
             <div class="col-7">
-                <div class="d-flex flex-column" style="font-size: 1.4vmin;">
+                <div class="d-flex flex-column" style="">
                     <div class="p-0 m-0">
-                        <p class="m-0" style="color: #0f0e5d;">
+                        <p class="m-0" style="color: #0f0e5d; font-size: 1.2vmin;">
                             <button 
                                 class="btn btn-sm btn-close-white p-0" 
                                 type="button" 
@@ -183,7 +183,8 @@
         </div>
     </div>
     <!-- Education -->
-    <div class="container-lg my-2" id="education" style="font-size: 1.8vmin;">
+    <p id="education"></p>
+    <div class="container-lg my-2" style="font-size: 2.0vmin;">
         <div class="row justify-content-center flex-nowrap">
             <div class="col-10">
                 <p class="my-0" style="color: #1f1e61;"><strong>Education</strong></p>
@@ -228,7 +229,7 @@
     </div>
 
     <!-- Experience -->
-    <div class="container-lg my-2" id="experience" style="font-size: 1.8vmin;">
+    <div class="container-lg my-2" id="experience" style="font-size: 2.0vmin;">
         <div class="row justify-content-center flex-nowrap">
             <div class="col-10">
                 <p class="my-0" style="color: #1f1e61;"><strong>Experience</strong></p>
@@ -289,7 +290,7 @@
     </div>
 
     <!-- Awards -->
-    <div class="container-lg my-2" id="award" style="font-size: 1.5vmin;">
+    <div class="container-lg my-2" id="award" style="font-size: 2.0vmin;">
         <div class="row justify-content-center flex-nowrap">
             <div class="col-10">
                 <p class="my-0" style="color: #1f1e61;"><strong>Awards</strong></p>
@@ -309,7 +310,7 @@
     </div>
 
     <!-- Project -->
-    <div class="container-lg my-2" id="project" style="font-size: 1.5vmin;">
+    <div class="container-lg my-2" id="project" style="font-size: 2.0vmin;">
         <div class="row justify-content-center flex-nowrap">
             <div class="col-10">
                 <p class="my-0" style="color: #1f1e61;"><strong>Projects</strong></p>
