--- a/index.html
+++ b/index.html
@@ -382,13 +382,13 @@
                                         
                                     </p>
                                 </div>
-                                <div class="col-3" style="align-self: center;">
+                                <div class="col-4" style="align-self: center;">
                                     <img
-                                        src="./static/imgs/fit.jpg"
+                                        src="./static/imgs/mou.png"
                                         class="rounded img-fluid float-end"
                                         alt=""
-                                        width="50%"
-                                        height="50%">
+                                        width="80%"
+                                        height="80%">
                                 </div>
                             </div>
                         </div>
