--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-3">
+                <div class="col-3" style="align-self: center;">
                     <img
                         src="./static/imgs/me.jpg"
                         class="img-fluid rounded float-end"
@@ -272,7 +272,7 @@
             <div class="row justify-content-center flex-nowrap py-3" style="font-size: 1.5vmin">
                 <div class="col-7">
                     <p class="my-1"><strong>Teaching Assitant</strong></p>
-                    <p class="my-1">Teaching assitant of Python Computer Programming at NTU</p>
+                    <p class="my-1">Teaching assitant of <i>Python Computer Programming</i> at NTU</p>
                     <p class="my-1">Nov. 2021 - Jun. 2023</p>
                 </div>
                 <div class="col-3">
@@ -296,6 +296,7 @@
                         <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics, Dec. 2017</li>
                         <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics, Jun. 2018</li>
                         <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics, Dec. 2018</li>
+                        <li class="py-1">Scholarship of Mengka Longshan Temple, Dec. 2018</li>
                         <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics, Jun. 2019</li>
                         <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics, Dec. 2019</li>
                         <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics, Jun. 2020</li>
@@ -386,7 +387,6 @@
                                     <img
                                         src="./static/imgs/mou.png"
                                         class="rounded img-fluid float-end"
-                                        alt=""
                                         width="80%"
                                         height="80%">
                                 </div>
