--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 </header>
 <body>
     <div class="container-fluid" style="min-height:100%;position:relative;">
-        <div class="container-lg" style="font-size: 2.0vmin;">
+        <div class="container-lg">
             <div class="row justify-content-center flex-nowrap">
                 <div class="col-10">
                     <a
@@ -130,7 +130,7 @@
                         aria-expanded="false" 
                         aria-controls="collapse-1 collapse-2"
                         style="color: #1f1e61;">
-                        <strong>About me <i class="bi bi-caret-left-fill" style="animation: cursor 1s infinite;"></i></strong>
+                        <p class="my-0 text-lg" style="color: #1f1e61;"><strong>About Me </strong><i class="bi bi-caret-left-fill" style="animation: cursor 1s infinite;"></i></p>
                     </a>
                     <hr class="my-1">
                 </div>
@@ -143,29 +143,21 @@
                                 <div class="card card-body border-0 p-2">
                                     <ul class="list-unstyled">
                                         <li><i class="bi bi-geo-alt-fill"></i><span class="px-1">Taipei, Taiwan</span></li>
-                                        <li><i class="bi bi-buildings-fill"></i><span class="px-1">NTU Math</span></li>
+                                        <li><i class="bi bi-buildings-fill"></i><span class="px-1">NTU IAMS</span></li>
                                         <li><i class="bi bi-envelope-fill"></i><span class="px-1">
                                             <a class="text-dark" href="mailto: r10246002@ntu.edu.tw">r10246002@ntu.edu.tw</a>
                                         </span></li>
                                         <li><i class="bi bi-github"></i><span class="px-1">
                                             <a class="text-dark" href="https://github.com/SeanChenTaipei">SeanChenTaipei</a>
                                         </span></li>
-                                        
                                     </ul>
                                 </div>
                             </div>
                             <div class="collapse multi-collapse" id="collapse-2" style="font-size: 1.2vw;">
                                 <div class="card card-body border-0 p-1">
-                                    <p>Hello, my name is Chun-Hsien (陳俊憲), and you can also call me Sean.
-                                        I am a graduate student at National Taiwan University's Institute of Applied Mathematics,
-                                        where I am specializing in financial engineering and machine learning .</p>
-                                    <p>My background and academic interests make me a well-rounded and knowledgeable
-                                        individual, with a passion for using mathematical models and algorithms
-                                        to solve real-world problems in finance and data analysis. 
-                                        I believe that my unique experiences and perspectives will
-                                        continue to enrich my academic journey as I explore new
-                                        opportunities in the field of mathematics. <br>
-                                        I am looking forward to meeting and connecting with others in the math and finance community.</p>  
+                                    <p>Hello, my name is Chun-Hsien (陳俊憲), but you can call me Sean. I am currently a graduate student at the Institute of Applied Mathematics in National Taiwan University, specializing in financial engineering and machine learning.</p>
+                                    <p>My diverse academic background and interests have equipped me with a strong understanding of mathematical models and algorithms, allowing me to develop effective solutions to real-world problems in finance and data analysis. Through my studies, I have developed a particular passion for utilizing these skills to make a positive impact on various industries.</p>   
+                                    <p>I am excited to connect with others in the math and finance community, and I look forward to new opportunities to learn, grow, and contribute. Thank you for considering my application.</p> 
                                 </div>
                             </div>
                         </div>
