--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
             <div class="row justify-content-center flex-nowrap">
                 <div class="col-7">
                     <div class="d-flex flex-column">
-                        <div class="">
+                        <div>
                             <div class="collapse show multi-collapse" id="collapse-1">
                                 <div class="card card-body border-0 p-2">
-                                    <ul class="list-unstyled">
+                                    <ul class="list-unstyled" style="font-size: 2vmin;">
                                         <li><i class="bi bi-geo-alt-fill"></i><span class="px-1">Taipei, Taiwan</span></li>
                                         <li><i class="bi bi-buildings-fill"></i><span class="px-1">NTU IAMS</span></li>
                                         <li><i class="bi bi-envelope-fill"></i><span class="px-1">
