--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
                 </div>
                 <div class="col-3" style="align-self: center;">
                     <img
-                        src="./static/imgs/me.jpg"
+                        src="./static/imgs/cool.jpg"
                         class="img-fluid rounded float-end"
-                        width="60%"
+                        width="70%"
                         height="60%">
                 </div>
             </div>
@@ -285,14 +285,11 @@
                     <p class="my-0" style="color: #1f1e61;"><strong>Awards</strong></p>
                     <hr class="my-1">
                     <ul class="px-3" style="font-size: 1.5vmin;">
-                        <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics, Dec. 2017</li>
-                        <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics, Jun. 2018</li>
-                        <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics, Dec. 2018</li>
-                        <li class="py-1">Scholarship of Mengka Longshan Temple, Dec. 2018</li>
-                        <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics, Jun. 2019</li>
-                        <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics, Dec. 2019</li>
-                        <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics, Jun. 2020</li>
+                        <li class="py-1">AI CUP 2023 Spring Competition Golden Medal Award, May 2023</li>
+                        <li class="py-1">AI CUP 2022 Fall Competition Top 3%, Dec 2022</li>
                         <li class="py-1">The Memorial Scholarship Foundation to Lin Hsiung Chen, Dec. 2020</li>
+                        <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics 6 times</li>
+                        
                     </ul>
                 </div>
             </div>
