--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                                 <div class="card card-body border-0 p-1">
                                     <p>Hello, my name is Chun-Hsien (陳俊憲), but you can call me Sean. I am currently a graduate student at the Institute of Applied Mathematics in National Taiwan University, specializing in financial engineering and machine learning.</p>
                                     <p>My diverse academic background and interests have equipped me with a strong understanding of mathematical models and algorithms, allowing me to develop effective solutions to real-world problems in finance and data analysis. Through my studies, I have developed a particular passion for utilizing these skills to make a positive impact on various industries.</p>   
-                                    <p>I am excited to connect with others in the math and finance community, and I look forward to new opportunities to learn, grow, and contribute. Thank you for considering my application.</p> 
+                                    <p>I am excited to connect with others in the math, machine learning and finance community, and I look forward to new opportunities to learn, grow, and contribute. Thank you for considering my application.</p> 
                                 </div>
                             </div>
                         </div>
@@ -289,7 +289,6 @@
                         <li class="py-1">AI CUP 2022 Fall Competition Top 3%, Dec 2022</li>
                         <li class="py-1">The Memorial Scholarship Foundation to Lin Hsiung Chen, Dec. 2020</li>
                         <li class="py-1">Academic Excellent Award at NCCU Applied Mathematics 6 times</li>
-                        
                     </ul>
                 </div>
             </div>
