--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="icon" type="image/x-icon" href="static/imgs/dinosaur.png">
+    <link rel="icon" type="image/x-icon" href="static/imgs/neko.png">
 </head>
 <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
@@ -106,7 +106,7 @@
                     <li class="nav-item">
                         <a 
                         class="nav-link"
-                        href="https://drive.google.com/file/d/1OTNFGJYRCUhMq0qT9cgAoYLI2-n2jGoF/view?usp=share_link" 
+                        href="https://drive.google.com/file/d/1XvS8gzZ8iFwYCgsIGcFh1_CQq7NXgKPh/view?usp=sharing" 
                         target="_blank">
                             <i class="bi bi-file-earmark-person-fill"></i>
                             <span class="mx-1">CV</span>
