--- a/index.html
+++ b/index.html
@@ -304,6 +304,30 @@
                         <div class="card-body">
                           <div class="row flex-nowrap py-4" style="font-size: 1.5vmin">
                                 <div class="col-8">
+                                    <h5 class="card-title">Multimodal Pathological Voice Classification</h5>
+                                    <p class="my-1"><strong>AI CUP 2023 Spring Competition</strong></p>
+                                    <p class="my-1">Audio Classification</p>
+                                    <p class="my-1">
+                                        May. 2023 - June. 2023
+                                        <a type="button" class="btn btn-sm rounded-circle" target="_blank" href="https://github.com/SeanChenTaipei/Audio_Classification">
+                                            <i class="bi bi-github icon"></i>
+                                        </a>
+                                    </p>
+                                </div>
+                                <div class="col-4" style="align-self: center;">
+                                    <img
+                                        src="./static/imgs/multi.png"
+                                        class="rounded img-fluid float-end"
+                                        width="80%"
+                                        height="80%">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-body">
+                          <div class="row flex-nowrap py-4" style="font-size: 1.5vmin">
+                                <div class="col-8">
                                     <h5 class="card-title">Projects in Natural Language Processing</h5>
                                     <p class="my-1"><strong>Adaptive deep learning 2022</strong></p>
                                     <p class="my-1">Intent Classification、Slot Tagging、Chinese Question Answering、Natural Language Generation</p>
