--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
                             </div>
                             <div class="collapse multi-collapse" id="collapse-2" style="font-size: 1.2vw;">
                                 <div class="card card-body border-0 p-1">
-                                    <p>Hello, my name is Chun-Hsien (陳俊憲), but you can call me Sean. I am currently a graduate student at the Institute of Applied Mathematics in National Taiwan University, specializing in financial engineering and machine learning.</p>
-                                    <p>My diverse academic background and interests have equipped me with a strong understanding of mathematical models and algorithms, allowing me to develop effective solutions to real-world problems in finance and data analysis. Through my studies, I have developed a particular passion for utilizing these skills to make a positive impact on various industries.</p>   
-                                    <p>I am excited to connect with others in the math, machine learning and finance community. I look forward to new opportunities to learn, grow, and contribute.</p> 
+                                    <p>Greetings! I'm Sean, also known as Chun-Hsien (陳俊憲). I am currently a graduate student at the Institute of Applied Mathematics in National Taiwan University, specializing in machine learning, data science, and financial engineering.</p>
+                                    <p>My diverse academic background and interests have equipped me with a strong understanding of mathematical models and algorithms, allowing me to develop effective solutions to real-world problems in data analysis. Through my studies, I have developed a particular passion for utilizing these skills to make a positive impact on various industries.</p>   
+                                    <p>I am excited to connect with others in the math, machine learning, deep learning  and finance community. I look forward to new opportunities to learn, grow, and contribute.</p> 
                                 </div>
                             </div>
                         </div>
