--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
                 <div class="col-3" style="align-self: center;">
                     <img
-                        src="./static/imgs/cool.jpg"
+                        src="./static/imgs/ocean.jpg"
                         class="img-fluid rounded float-end"
                         width="70%"
                         height="60%">
